add_executable(circle_fit_g20 circle_fit.cpp)
set_target_properties(circle_fit_g20 PROPERTIES OUTPUT_NAME circle_fit_g20)
target_link_libraries(circle_fit_g20 core solver_dense)

add_executable(curve_fit curve_fit.cpp)
set_target_properties(curve_fit PROPERTIES OUTPUT_NAME curve_fit)
target_link_libraries(curve_fit core solver_dense)
